Add users CRUD and Swagger documentation
